feat: updating status in the sponsorship history table and deactivating sponsorship